fixed alignment of alltime cards

--- a/src/components/Alltime.scss
+++ b/src/components/Alltime.scss
@@ -1,5 +1,6 @@
 .alltime {
   display: flex;
+  justify-content: space-evenly;
 }
 
 .card-body {
